Lyout shift fix

--- a/_includes/assets/css/sass/_mobile-menu.scss
+++ b/_includes/assets/css/sass/_mobile-menu.scss
@@ -71,7 +71,6 @@
   height: 100vh;
   justify-content: center;
   position: fixed;
-  top: 0;
   width: 100vw;
   z-index: 1;
   text-align: center;
